// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
<Tooltip
  id="renders"
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="renders"
          open={false}
        >
          content
        </TooltipContent>
      }
      open={false}
      preferredDirections={
        Array [
          "top",
          "top-start",
          "top-end",
          "bottom",
          "bottom-start",
          "bottom-end",
        ]
      }
    >
      <div>
        trigger
      </div>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders open tooltip 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  -webkit-transform: translateY( -9px );
  -ms-transform: translateY( -9px );
  transform: translateY( -9px );
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  position: absolute;
  bottom: 4px;
  left: calc(50% - 5px);
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  box-sizing: border-box;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  height: 10px;
  width: 10px;
}

<Tooltip
  id="opened"
  open={true}
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="opened"
          open={true}
        >
          content
        </TooltipContent>
      }
      open={true}
      preferredDirections={
        Array [
          "top",
          "top-start",
          "top-end",
          "bottom",
          "bottom-start",
          "bottom-end",
        ]
      }
    >
      <div>
        trigger
      </div>
      <clickOutside(DropdownContents)
        open={true}
      >
        <DropdownContents
          open={true}
        >
          <ForwardRef
            style={
              Object {
                "left": "0",
                "position": "absolute",
                "top": "0",
                "zIndex": 2,
              }
            }
          >
            <Overlay
              innerRef={[Function]}
              overlayRoot={
                .emotion-0 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  -webkit-transform: translateY( -9px );
  -ms-transform: translateY( -9px );
  transform: translateY( -9px );
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  position: absolute;
  bottom: 4px;
  left: calc(50% - 5px);
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  box-sizing: border-box;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  height: 10px;
  width: 10px;
}

<body>
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="inverseColorMode emotion-0"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                      <div
                        class="emotion-1"
                      />
                    </div>
                  </div>
                </body>
              }
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Portal
                containerInfo={
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="inverseColorMode emotion-0"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                      <div
                        class="emotion-1"
                      />
                    </div>
                  </div>
                }
              >
                <div
                  style={
                    Object {
                      "left": "0",
                      "position": "absolute",
                      "top": "0",
                      "zIndex": 2,
                    }
                  }
                >
                  <TooltipContent
                    id="opened"
                    open={true}
                  >
                    <div
                      aria-hidden={false}
                      className="inverseColorMode emotion-0"
                      data-cy="tooltipContent"
                      id="opened"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": undefined,
                          "minWidth": undefined,
                        }
                      }
                    >
                      content
                    </div>
                    <div
                      className="emotion-1"
                    />
                  </TooltipContent>
                </div>
              </Portal>
            </Overlay>
          </ForwardRef>
        </DropdownContents>
      </clickOutside(DropdownContents)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders with preferred directions 1`] = `
.emotion-0 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  -webkit-transform: translateY( -9px );
  -ms-transform: translateY( -9px );
  transform: translateY( -9px );
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  position: absolute;
  bottom: 4px;
  left: calc(50% - 5px);
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  box-sizing: border-box;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  height: 10px;
  width: 10px;
}

<Tooltip
  id="customDir"
  open={true}
  preferredDirections={
    Array [
      "bottom-start",
    ]
  }
  trigger="trigger"
>
  <span
    data-cy="tooltip"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="customDir"
          open={true}
        >
          content
        </TooltipContent>
      }
      open={true}
      preferredDirections={
        Array [
          "bottom-start",
        ]
      }
    >
      <div>
        trigger
      </div>
      <clickOutside(DropdownContents)
        open={true}
      >
        <DropdownContents
          open={true}
        >
          <ForwardRef
            style={
              Object {
                "left": "0",
                "position": "absolute",
                "top": "0",
                "zIndex": 2,
              }
            }
          >
            <Overlay
              innerRef={[Function]}
              overlayRoot={
                <body>
                  <div>
                    <div
                      data-popper-escaped="true"
                      data-popper-placement="top"
                      data-popper-reference-hidden="true"
                      style="z-index: 2; position: absolute; left: 0px; top: 0px; visibility: hidden; pointer-events: none; bottom: 0px; transform: translate(0px, 0px);"
                    >
                      <div
                        aria-hidden="false"
                        class="inverseColorMode emotion-0"
                        data-cy="tooltipContent"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                      <div
                        class="emotion-1"
                      />
                    </div>
                  </div>
                  .emotion-0 {
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  -webkit-transform: translateY( -9px );
  -ms-transform: translateY( -9px );
  transform: translateY( -9px );
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  position: absolute;
  bottom: 4px;
  left: calc(50% - 5px);
  background-color: var(--themeBgPrimaryInverted,#1B2029);
  box-sizing: border-box;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  height: 10px;
  width: 10px;
}

<div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="inverseColorMode emotion-0"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                      <div
                        class="emotion-1"
                      />
                    </div>
                  </div>
                </body>
              }
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Portal
                containerInfo={
                  <div>
                    <div
                      style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                    >
                      <div
                        aria-hidden="false"
                        class="inverseColorMode emotion-0"
                        data-cy="tooltipContent"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                      <div
                        class="emotion-1"
                      />
                    </div>
                  </div>
                }
              >
                <div
                  style={
                    Object {
                      "left": "0",
                      "position": "absolute",
                      "top": "0",
                      "zIndex": 2,
                    }
                  }
                >
                  <TooltipContent
                    id="customDir"
                    open={true}
                  >
                    <div
                      aria-hidden={false}
                      className="inverseColorMode emotion-0"
                      data-cy="tooltipContent"
                      id="customDir"
                      role="tooltip"
                      style={
                        Object {
                          "maxWidth": undefined,
                          "minWidth": undefined,
                        }
                      }
                    >
                      content
                    </div>
                    <div
                      className="emotion-1"
                    />
                  </TooltipContent>
                </div>
              </Portal>
            </Overlay>
          </ForwardRef>
        </DropdownContents>
      </clickOutside(DropdownContents)>
    </Dropdownable>
  </span>
</Tooltip>
`;
